# bow-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
modules/scm/: tree-sitter.c
sample/: simple.js
scripts/: init.scm
